--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -175,7 +175,7 @@
 }
 
 .TestimonialsIbm {
-  margin: 80px auto; /* верхний внешний отступ блока TestimonialsIbm 80 пикселей, отступы по бокам автоматические */
+  margin: 30px auto 80px; /* верхний внешний отступ блока TestimonialsIbm 30 пикселей, отступы по бокам автоматические, нижний внешний отступ блока TestimonialsIbm 80 пикселей */
 }
 
 .TestimonialsContent {
@@ -191,4 +191,148 @@
 
 .TestimonialsButton {
   width: 286px; /* ширина элемента блока TestimonialsButton 286 пикселей */
+}
+
+.Pricing {
+  background-color: #252b42; /* фоновый цвет блока Pricing #252b42 */
+  color: #ffffff; /* цвет текста блока Pricing #ffffff */
+  text-align: center; /* выравнивание текста по центру */
+  padding: 100px 0; /* верхний и нижний внутренние отступы блока Pricing 100 пикселей, отступы по бокам 0 пикселей */
+}
+
+.PricingList {
+  margin: 80px auto 0; /* верхний внешний отступ блока PricingList 80 пикселей, отступы по бокам автоматические, нижний внешний отступ блока PricingList 0 пикселей */
+  max-width: 1105px; /* максимальная ширина блока PricingList 1105 пикселей */
+  display: grid; /* элементы блока PricingList выстраиваются в сетку */
+  grid-template-columns: auto auto auto; /* количество колонок в сетке 2 */
+  grid-gap: 50px; /* расстояние между элементами сетки 50 пикселей */
+}
+
+.PricingListItem {
+  margin: 43px 0; /* верхний и нижний внешние отступы элемента блока PricingListItem 43 пикселей, отступы по бокам 0 пикселей */
+  background-color: #ffffff; /* фоновый цвет элемента блока PricingListItem #ffffff */
+  color: #252b42; /* цвет текста элемента блока PricingListItem #252b42 */
+  border-radius: 10px; /* скругление углов элемента блока PricingListItem 10 пикселей */
+  padding: 40px; /* внутренние отступы элемента блока PricingListItem 40 пикселей */
+}
+
+.PricingListItemPrice {
+  width: fit-content; /* ширина элемента блока PricingListItemPrice подстраивается под ширину содержимого */
+  margin: 30px auto; /* верхний внешний отступ элемента блока PricingListItemPrice 30 пикселей, отступы по бокам автоматические */
+  display: flex; /* элементы блока PricingListItemPrice выстраиваются в ряд */
+}
+
+.PricingListItemPriceText {
+  margin-left: 10px; /* левый внешний отступ элемента блока PricingListItemPriceText 10 пикселей */
+  margin-top: 10px; /* верхний внешний отступ элемента блока PricingListItemPriceText 10 пикселей */
+  text-align: left; /* выравнивание текста по левому краю */
+}
+
+.Pricing ul { /* селектор элемента списка ul в блоке Pricing */
+  list-style: none; /* убираем маркеры списка */
+  padding: 0; /* обнуляем внутренние отступы списка */
+  line-height: 48px; /* высота строки 48 пикселей */
+}
+
+.PricingListItemButton {
+  width: 100%; /* ширина элемента блока PricingListItemButton 100% */
+  margin-top: 30px; /* верхний внешний отступ элемента блока PricingListItemButton 30 пикселей */
+}
+
+.PricingListItem:nth-child(2) { /* селектор элемента блока PricingListItem, который является вторым в списке */
+  margin: 0; /* обнуляем внешние отступы элемента блока PricingListItem */
+  background-color: #2091F9; /* фоновый цвет элемента блока PricingListItem #2091F9 */
+  color: #ffffff; /* цвет текста элемента блока PricingListItem #ffffff */
+  border-radius: 10px; /* скругление углов элемента блока PricingListItem 10 пикселей */
+  padding: 83px 40px; /* внутренние отступы элемента блока PricingListItem 83 пикселей сверху и снизу, 40 пикселей по бокам */
+}
+
+.PricingListItem:nth-child(2) .PricingListItemButton { /* селектор элемента блока PricingListItemButton, который является вторым в списке */
+  background-color: #ffffff; /* фоновый цвет элемента блока PricingListItemButton #ffffff */
+  color: #2091F9; /* цвет текста элемента блока PricingListItemButton #2091F9 */
+}
+
+.Contact {
+  margin-top: 203px; /* верхний внешний отступ блока Contact 203 пикселя */
+  text-align: center;
+}
+
+.ContactRow {
+  max-width: 1261px; /* максимальная ширина элемента блока ContactRow 1261 пикселей */
+  display: flex; /* элементы блока ContactRow выстраиваются в ряд */
+  margin: 50px auto 102px; /* верхний и нижний внешние отступы элемента блока ContactRow 50 и 102 пикселей, отступы по бокам автоматические */
+}
+
+.ContactForm {
+  text-align: left;
+  width: 453px; /* ширина элемента блока ContactForm 453 пикселя */
+  border: 1px solid #dddddd; /* рамка элемента блока ContactForm 1 пиксель, цвет #dddddd */
+  border-radius: 20px; /* скругление углов элемента блока ContactForm 20 пикселей */
+  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07); /* тень элемента блока ContactForm 0 пикселей по горизонтали и вертикали, 13 пикселей размытия, 19 пикселей расстояния, цвет rgba(0, 0, 0, 0.07) */
+  padding: 52px 50px; /* внутренние отступы элемента блока ContactForm 52 пикселя сверху и снизу, 50 пикселей по бокам */
+}
+
+.ContactForm h3 {
+  text-align: center;
+}
+
+.ContactFormInput {
+  width: 100%; /* ширина элемента блока ContactFormInput 100% */
+  margin-top: 45px; /* верхний внешний отступ элемента блока ContactFormInput 45 пикселей */
+}
+
+.ContactFormTextarea {
+  width: 353px; /* ширина элемента блока ContactFormTextarea 353 пикселя */
+  height: 193px; /* высота элемента блока ContactFormTextarea 193 пикселя */
+  background: #F5F5F5; /* фоновый цвет элемента блока ContactFormTextarea #F5F5F5 */
+  border: 1px solid #E8E8E8; /* рамка элемента блока ContactFormTextarea 1 пиксель, цвет #E8E8E8 */
+  padding: 23px 20px; /* внутренние отступы элемента блока ContactFormTextarea 23 пикселя сверху и снизу, 20 пикселей по бокам */
+  margin-top: 45px; /* верхний внешний отступ элемента блока ContactFormTextarea 45 пикселей */
+  font-size: 15px; /* размер шрифта элемента блока ContactFormTextarea 15 пикселей */
+}
+
+.ContactFormButton {
+  margin-top: 45px; /* верхний внешний отступ элемента блока ContactFormButton 45 пикселей */
+  width: 145px; /* ширина элемента блока ContactFormButton 145 пикселей */
+}
+
+.ContactInfo {
+  flex: 1; /* элемент блока ContactInfo занимает все свободное пространство */
+  margin-left: 50px; /* левый внешний отступ элемента блока ContactInfo 50 пикселей */
+  text-align: left;
+  display: grid; /* элементы блока ContactInfo выстраиваются в сетку */
+  grid-template-columns: auto auto auto;
+  column-gap: 15px; /* расстояние между колонками элемента блока ContactInfo 15 пикселей */
+}
+
+.ContactInfoItem {
+  text-align: center; /* выравнивание текста элемента блока ContactInfoItem по центру */
+}
+
+.ContactInfoItem h5 { /* заголовок элемента блока ContactInfoItem */
+  height: 46px; /* высота элемента блока ContactInfoItem 46 пикселей */
+  display: flex; /* для центрирования текста по вертикали */
+  align-items: center; /* для центрирования текста по вертикали */
+}
+
+.ContactInfoMap {
+  margin: 60px 120px; /* верхний и нижний внешние отступы элемента блока ContactInfoMap 60 пикселей, левый и правый внешние отступы элемента блока ContactInfoMap 120 пикселей */
+  grid-column: 1 / span 3; /* элемент блока ContactInfoMap занимает 3 колонки */
+}
+
+.Footer {
+  background-color: #252b42; /* фоновый цвет элемента блока Footer #252b42 */
+  color: #ffffff; /* цвет текста элемента блока Footer #ffffff */
+  padding: 150px 0; /* внутренние отступы элемента блока Footer 150 пикселей сверху и снизу, 0 пикселей по бокам */
+}
+
+.FooterRow {
+  margin: 0 auto; /* верхний и нижний внешние отступы элемента блока FooterRow 150 пикселей, левый и правый внешние отступы элемента блока FooterRow автоматические */
+  display: flex; /* элементы блока FooterRow выстраиваются в ряд */
+  width: 991px; /* ширина элемента блока FooterRow 991 пикселей */
+}
+
+.FooterItem {
+  min-width: 170px; /* минимальная ширина элемента блока FooterItem 170 пикселей */
+  margin-right: 20px; /* правый внешний отступ элемента блока FooterItem 20 пикселей */
 }
