--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: #252b42;
 }
 
 h1 {
@@ -20,6 +21,7 @@ h2 {
   font-size: 48px;
   line-height: 56px;
   font-weight: 400;
+  margin-bottom: 50px;
 }
 
 h3 {
