--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -374,8 +374,10 @@
 }
 
 .HeaderMenu,
-.HeaderTitleMobile {
-  display: none; /* скрываем элементы блока HeaderMenu и HeaderTitleMobile в десктопной версии */
+.HeaderTitleMobile,
+.FeaturesVideoMobile,
+.NewsletterImageMobile {
+  display: none; /* скрываем элементы блока HeaderMenu, блока HeaderTitleMobile, блока FeaturesVideoMobile, блока NewsletterImageMobile */
 }
 
 @media (max-width: 1270px) {
@@ -409,5 +411,108 @@
   .HeaderTitleMobile,
   .HeaderSubtitle {
     padding: 0 16px; /* внутренние отступы элемента блока HeaderTitleMobile 0 пикселей сверху и снизу, 16 пикселей по бокам */
+  }
+
+  .Features {
+    margin-top: 110px; /* верхний внешний отступ элемента блока Features 110 пикселей */
+  }
+
+  .FeaturesVideoMobile {
+    display: block; /* показываем элемент блока FeaturesVideoMobile при ширине экрана меньше 1270 пикселей */
+    margin: 50px auto 0; /* верхний внешний отступ блока FeaturesVideoMobile 132 пикселей, отступы по бокам автоматические */
+    width: 100%; /* ширина блока FeaturesVideoMobile 100% */
+    max-width: 386px; /* максимальная ширина блока FeaturesVideoMobile 386 пикселей */
+    height: 229px; /* высота блока FeaturesVideoMobile 229 пикселей */
+    background-image: url(/screen-mobile.png); /* задний фон блока FeaturesVideoMobile */
+    background-size: cover; /* фоновое изображение растягивается на всю ширину блока */
+    background-position: center; /* фоновое изображение выравнивается по центру */
+    background-repeat: no-repeat; /* фоновое изображение не повторяется */
+    display: flex; /* для позиционирование дочернего элемента блока FeaturesVideoMobile */
+    justify-content: center; /* дочерний элемент блока FeaturesVideoMobile выравнивается по центру по горизонтали */
+    align-items: center; /* дочерний элемент блока FeaturesVideoMobile выравнивается по центру по вертикали */
+  }
+
+  .FeaturesVideoButtonMobile {
+    width: 61px; /* ширина элемента блока FeaturesVideoButtonMobile 61 пикселей */
+    height: 61px; /* высота элемента блока FeaturesVideoButtonMobile 61 пикселей */
+  }
+
+  .FeaturesList {
+    width: 255px; /* ширина элемента блока FeaturesList 255 пикселей */
+    grid-template-columns: auto; /* количество колонок в сетке элемента блока FeaturesList 1 */
+    row-gap: 75px; /* расстояние между строками элемента блока FeaturesList 75 пикселей */
+  }
+
+  .FeaturesVideo {
+    display: none; /* скрываем элемент блока FeaturesVideo при ширине экрана меньше 1270 пикселей */
+  }
+
+  .Advantage {
+    text-align: center; /* текст элемента блока Advantage выравнивается по центру */
+    grid-template-columns: auto; /* количество колонок в сетке элемента блока Advantage 1 */
+    row-gap: 60px; /* расстояние между строками элемента блока Advantage 60 пикселей */
+    margin: 126px auto; /* верхний и нижний внешние отступы блока Advantage 126 пикселей, отступы по бокам автоматические */
+  }
+
+  .Advantage img {
+    /* элемент изображения блока Advantage */
+    width: 372px; /* ширина изображения блока Advantage 372 пикселей */
+    height: 225px; /* высота изображения блока Advantage 225 пикселей */
+  }
+
+  .Newsletter {
+    text-align: center; /* текст элемента блока Newsletter выравнивается по центру */
+    grid-template-columns: auto; /* количество колонок в сетке элемента блока Newsletter 1 */
+  }
+
+  .Newsletter > div:first-child {
+    /* первый дочерний элемент блока Newsletter */
+    display: none; /* скрываем элемент при ширине экрана меньше 1270 пикселей */
+  }
+
+  .Newsletter > div:last-child {
+    /* последний дочерний элемент блока Newsletter */
+    padding: 0; /* обнуляем внутренние отступы */
+  }
+
+  .NewsletterImageMobile {
+    display: inline-block; /* элемент блока NewsletterImageMobile отображается как строчный элемент */
+  }
+
+  .NewsletterForm {
+    padding: 0 33px; /* внутренние отступы элемента блока NewsletterForm 33 пикселя по бокам */
+    max-width: 418px; /* максимальная ширина элемента блока NewsletterForm 418 пикселей */
+    margin: 0 auto; /* отступы по бокам автоматические */
+  }
+
+  .NewsletterInput,
+  .NewsletterButton {
+    width: 100%; /* ширина элемента блока NewsletterInput 100% */
+  }
+
+  .NewsletterButton {
+    margin: 0; /* обнуляем внешние отступы */
+  }
+
+  .PartnersList {
+    border: none; /* убираем рамку элемента блока PartnersList */
+    width: 275px; /* ширина элемента блока PartnersList 275 пикселей */
+  }
+
+  .PartnersItem {
+    flex: 1 1 100%; /* элемент блока PartnersItem занимает 100% ширины родительского элемента */
+    margin-bottom: 30px; /* нижний внешний отступ элемента блока PartnersItem 30 пикселей */
+    display: none;
+  }
+
+  .PartnersItem img {
+    width: 100%; /* ширина изображения элемента блока PartnersItem 100% */
+  }
+
+  .PartnersItem:nth-child(1),
+  .PartnersItem:nth-child(2),
+  .PartnersItem:nth-child(3) {
+    /* первые три элемента блока PartnersItem */
+    display: block; /* элемент блока PartnersItem отображается как блочный элемент */
   }
 }
