--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -376,8 +376,9 @@
 .HeaderMenu,
 .HeaderTitleMobile,
 .FeaturesVideoMobile,
-.NewsletterImageMobile {
-  display: none; /* скрываем элементы блока HeaderMenu, блока HeaderTitleMobile, блока FeaturesVideoMobile, блока NewsletterImageMobile */
+.NewsletterImageMobile,
+.ContactInfoMobile {
+  display: none; /* скрываем элементы блока HeaderMenu, элементы блока HeaderTitleMobile, элементы блока FeaturesVideoMobile, элементы блока NewsletterImageMobile, элементы блока ContactInfoMobile */
 }
 
 @media (max-width: 1270px) {
@@ -514,5 +515,75 @@
   .PartnersItem:nth-child(3) {
     /* первые три элемента блока PartnersItem */
     display: block; /* элемент блока PartnersItem отображается как блочный элемент */
+  }
+
+  .Testimonials h4 {
+    font-size: 20px; /* размер шрифта элемента блока Testimonials 20 пикселей */
+    line-height: 20px; /* высота строки элемента блока Testimonials 20 пикселей */
+  }
+
+  .PricingList {
+    grid-template-columns: auto; /* количество колонок в сетке элемента блока PricingList 1 */
+    row-gap: 50px; /* расстояние между строками элемента блока PricingList 50 пикселей */
+    max-width: 335px; /* максимальная ширина элемента блока PricingList 335 пикселей */
+  }
+
+  .ContactRow {
+    display: block; /* элемент блока ContactRow отображается как блочный элемент */
+  }
+
+  .ContactInfo {
+    display: none; /* скрываем элемент при ширине экрана меньше 1270 пикселей */
+  }
+
+  .ContactInfoMobile {
+    display: block; /* элемент блока ContactInfoMobile отображается как блочный элемент */
+    max-width: 378px; /* максимальная ширина элемента блока ContactInfoMobile 378 пикселей */
+    margin: 0 auto 100px; /* отступы по бокам автоматические, нижний внешний отступ элемента блока ContactInfoMobile 100 пикселей */
+  }
+
+  .ContactInfoMobile > div:first-child {
+    margin-bottom: 100px; /* нижний внешний отступ элемента блока ContactInfoMobile 150 пикселей */
+  }
+
+  .ContactInfoItem {
+    display: flex; /* элемент блока ContactInfoItem отображается как блочный элемент */
+    margin-bottom: 20px; /* нижний внешний отступ элемента блока ContactInfoItem 20 пикселей */
+  }
+
+  .ContactInfoItem img {
+    width: 60px; /* ширина изображения элемента блока ContactInfoItem 60 пикселей */
+  }
+
+  .ContactInfoItem h5 {
+    height: unset; /* высота элемента блока ContactInfoItem не задана */
+  }
+
+  .ContactForm {
+    margin: 0 auto; /* отступы по бокам автоматические */
+    width: 100%; /* ширина элемента блока ContactForm 100% */
+    max-width: 378px; /* максимальная ширина элемента блока ContactForm 378 пикселей */
+  }
+
+  .ContactFormTextarea {
+    width: 100%; /* ширина элемента блока ContactFormTextarea 100% */
+  }
+
+  .Footer {
+    padding: 107px 0; /* внутренние отступы элемента блока Footer 107 пикселей сверху и снизу, 0 пикселей по бокам */
+  }
+
+  .FooterRow {
+    width: 300px; /* ширина элемента блока FooterRow 300 пикселей */
+    text-align: center; /* выравнивание текста по центру */
+    display: block; /* элемент блока FooterRow отображается как блочный элемент */
+  }
+
+  .FooterItem {
+    margin: 0 auto 100px !important; /* отступы по бокам автоматические, нижний внешний отступ элемента блока FooterItem 100 пикселей */
+  }
+
+  .FooterContact {
+    text-align: left; /* выравнивание текста по левому краю */
   }
 }
